--- a/style.css
+++ b/style.css
@@ -1,36 +1,91 @@
+body {
+    background: black;
+    padding-left: 20px;
+    padding-right: 20px;
+}
 #header {
-    text-align: center;
+   text-align: center;
+   font-family: monospace;
+   font-size: 60px;
+   background-color: white;
 }
-
+#current-city {
+   text-align: center;
+   font-size: 25px;
+   font-family: monospace;
+   background-color: bisque;
+}
 #grid-container {
-    display: grid;
+   display: grid;
+   
 }
-
 #left {
-    grid-row-start: 1;
-    grid-row-end: 4;
-    text-align: left;
-    height: 150px;
-    width: 150px;
-    margin: 5px;
-    padding: 10px;
+  background-color: bisque;
+  padding: 10px;
+  grid-row-start: 1;   
+  grid-row-end: 4;
+  grid-column-start: 3; 
+  grid-column-end: 4;
+  color: black;
+  font-family: monospace;
+  line-height: 70px;
+  font-size: 20px;
+  text-align: right;
 }
-
 #center {
-    grid-row-start: 1;
-    grid-row-end: 4;
-    display: block;
-    text-align: center;
-    height: 150px;
-    width: 150px;
-    margin: 5px;
+   margin: 10px;
+   grid-row-start: 1;
+   grid-row-end: 4;
+   text-align: center;
+   color: white;
+   font-family: monospace;
+   line-height: 55px;
+   font-size: 25px;
 }
-
+h4 {
+   font-size: small;
+}
+h5 {
+   font-weight: 1000;
+}
 #right {
-    grid-row-start: 1;
-    grid-row-end: 4;
-    display: block;
-    width: 150px;
-    height: 150px;
-    margin: auto;
+   background-color: rgb(176, 201, 228);
+   padding: 10px;
+   grid-row-start: 1;
+   grid-row-end: 4;
+   grid-column-start: 1;
+   grid-column-end: 2;
+   text-align: left;
+   color: black;
+   font-family: monospace;
+   line-height: 50px;
+}
+/* box */
+.container  {
+   text-align: left;
+   background-color: white;
+   color: black;
+   width: 300px;
+   height: 80px;
+   padding: 5px;
+   overflow-x: scroll;
+   overflow-y: auto;
+   line-height: 20px;
+}
+#city-comment {
+   line-height: 20px;
+}
+ul {
+   text-align: left;
+   background-color: white;
+   color: black;
+   width: 300px;
+   height: 80px;
+   padding: 5px;
+   overflow-x: scroll;
+   overflow-y: auto;
+}
+#left {
+   font-size: 20px;
+   text-align: right;
 }
