--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body {
 }
 #grid-container {
    display: grid;
-   
+   justify-content: space-between;
+   align-content: space-between;
 }
 #left {
   background-color: bisque;
